@@ -4,7 +4,7 @@
     name= _"Loyalists"
     image="units/human-loyalists/lieutenant.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Lieutenant
+    type=random
     leader=Lieutenant,Swordsman,Pikeman,Javelineer,Shock Trooper,Longbowman,White Mage,Red Mage
     random_leader=Lieutenant,Swordsman,Pikeman,Javelineer,Longbowman,White Mage,Red Mage
     recruit=Cavalryman,Horseman,Spearman,Fencer,Heavy Infantryman,Bowman,Mage,Merman Fighter
