@@ -4,7 +4,7 @@
     name= _"Rebels"
     image="units/elves-wood/captain.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Elvish Captain
+    type=random
     leader=Elvish Captain,Elvish Hero,Elvish Ranger,Elvish Marksman,Elvish Druid,Elvish Sorceress,White Mage,Red Mage,Elder Wose
     random_leader=Elvish Captain,Elvish Hero,Elvish Ranger,Elvish Marksman,Elvish Druid,Elvish Sorceress,White Mage,Red Mage
     recruit=Elvish Fighter,Elvish Archer,Mage,Elvish Shaman,Elvish Scout,Wose,Merman Hunter
