@@ -4,7 +4,7 @@
     name= _"Undead"
     image="units/undead-necromancers/dark-sorcerer.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    type=Dark Sorcerer
+    type=random
     leader=Dark Sorcerer,Revenant,Deathblade,Bone Shooter,Necrophage
     random_leader=Dark Sorcerer,Revenant,Deathblade,Bone Shooter
     recruit=Skeleton,Skeleton Archer,Walking Corpse,Ghost,Vampire Bat,Dark Adept,Ghoul
