@@ -91,6 +91,7 @@ void leader_list_manager::update_leader_list(int side_index)
 	}
 
 	const std::string default_leader = side["type"];
+	const std::string random_leader = "random";
 	size_t default_index = 0;
 
 	std::vector<std::string>::const_iterator itor;
@@ -106,7 +107,10 @@ void leader_list_manager::update_leader_list(int side_index)
 		leaders_.push_back(default_leader);
 	}
 
-	leaders_.push_back("random");
+	if (default_leader != random_leader) {
+		leaders_.push_back(random_leader);
+	}
+
 	populate_leader_combo(default_index);
 }
 
