@@ -93,6 +93,7 @@ Version 1.11.0-svn:
      (bug #10784)
    * Changes to the time of day schedules of Fallenstar Lake and Silverhead
      Crossing
+   * Random leader is default selection when picking faction
  * Music and sound effects:
    * Replaced some of the wolf hit sounds with lower-pitched ones
  * Terrain:
